add endpoint to list zone
