# internal/server/server.go
@@ -103,6 +103,7 @@ func (s *Server) getRouter(cfg *config.Config) *gin.Engine {
 	router.POST("/competition/participants", s.addParticipantsToCompetition)
 	router.POST("/competition/referee", s.addRefereeToCompetition)
 	router.GET("/competition/:competitionID/participant/:dossard", s.getParticipant)
+	router.GET("/competition/:competitionID/zones", s.listZones)
 	router.POST("/run", s.createRun)
 	return router
 }
